Cambios en Paginas
Se agrega Pagina php inicio seccion y modificaciones en cuanto al css y en index

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@
                 
   				width: 100%;
 				height:20%;
-				background-image: url(img/baner.jpg);
+				background-image: url(../img/bannerasd.jpg);
 				background-repeat: no-repeat;
 				background-color: #27ae60;
 			} 
