--- a/css/main.css
+++ b/css/main.css
@@ -34,15 +34,16 @@
 				width: 100%;
 				height: 70%;
 			}
-			aside
+			#aside_1
 				{
 				position:absolute;
 				background-color:green;
 				width: 200px;
 				height: 700px;
-				margin-left: 1200px;
-				margin-bottom: 100px;
+				margin-left: 1100px;
+				margin-bottom: 200px;
 				}
+         
 			footer
 			{	
 				text-align: center;
@@ -108,4 +109,5 @@
 				font-size: 20px;
 				margin: 0;
 			}	
-			
+
+            
