--- a/css/main.css
+++ b/css/main.css
@@ -5,19 +5,21 @@
 			}
 		body
 			{
+				display: block;
+				margin: auto;
 				background-color: #A4A4A4;
-				margin:0;
 				width: 100%;
 				height: 1000px;
 			}
 			header
 			{
-                
+                display: block;
+				margin: auto;
   				width: 100%;
 				height:20%;
 				background-image: url(../img/bannerasd.jpg);
-				background-repeat: no-repeat;
-				background-color: #27ae60;
+				background-repeat: repeat-x;
+
 			} 
 				
 			nav
@@ -38,10 +40,9 @@
 				{
 				position:absolute;
 				background-color:green;
-				width: 200px;
-				height: 700px;
-				margin-left: 1100px;
-				margin-bottom: 200px;
+				width: 15%;
+				height: 100%;
+				margin-left: 70%;
 				}
          
 			footer
