thumbnail de la pestaña añadido(no es el final)

--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@
                 background-color: #333;
 				width: 100%;
 				height:5% ;	
+				font-family: "Bangers", cursive;
 			}
 			section 
 			{
@@ -65,6 +66,7 @@
     			padding: 0;
     			overflow: hidden;
     			background-color: #333;
+    			font-family: 'Bangers', cursive;
 			}
 			li 
 			{
@@ -110,5 +112,11 @@
 				font-size: 20px;
 				margin: 0;
 			}	
-
-            
+			A:link {color: white; font-size: 10pt; font-family: 'Bangers', serif; text-decoration: none }
+            A:hover {color: white; font-size: 15pt; font-family: 'Bangers', serif; text-decoration: none }
+            A:visited {color: white; font-size: 10pt; font-family: 'Bangers', serif; text-decoration: none }
+				button:hover {
+				 background: rgba(0,0,0,0);
+				 color: #3a7999;
+				 box-shadow: inset 0 0 0 3px #0046ff;
+				}
