--- a/css/main_registrarse.css
+++ b/css/main_registrarse.css
@@ -1,6 +1,6 @@
     body
         {
-            background: url(../img/fondo.jpg);
+            background: url(../img/fis.jpg);
             
             
             
@@ -17,7 +17,7 @@
 			margin-left: 30%;
 			margin-right: 10%;
 			margin-top: 5%;
-			font-family: fantasy;
+			font-family: 'Slackey', cursive;
 			
 		}
 		input
