--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 			{
 				display: block;
 				margin: auto;
-				background-color: #A4A4A4;
+				background-image: url(../img/fm.jpg);
 				width: 100%;
 				height: 1000px;
 			}
@@ -33,17 +33,19 @@
 			section 
 			{
 				position: absolute;
-				background-color: #A4A4A4;
-				width: 100%;
-				height: 70%;
+				background-image: url(../img/blanco.jpg);
+				width: 65%;
+				margin: 30px;
+				
 			}
 			#aside_1
 				{
 				position:absolute;
-				background-color:green;
+				background-image: url(../img/fondoaside.jpg);
 				width: 15%;
 				height: 100%;
 				margin-left: 70%;
+				color: white;
 				}
          
 			footer
@@ -93,7 +95,7 @@
 				margin-top: 0px;
 				padding-top: 50px;
 				margin-left: 400px;
-				font-family: hola;
+				
 				font-size: 50px;
 			}
 			.activa
