--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 			{
 				display: block;
 				margin: auto;
-				background-color: #A4A4A4;
+				background-image: url(../img/fm.jpg);
 				width: 100%;
 				height: 1000px;
 			}
@@ -28,21 +28,24 @@
                 background-color: #333;
 				width: 100%;
 				height:5% ;	
+				font-family: "Bangers", cursive;
 			}
 			section 
 			{
 				position: absolute;
-				background-color: #A4A4A4;
-				width: 100%;
-				height: 70%;
+				background-image: url(../img/blanco.jpg);
+				width: 65%;
+				margin: 30px;
+				
 			}
 			#aside_1
 				{
 				position:absolute;
-				background-color:green;
+				background-image: url(../img/fondoaside.jpg);
 				width: 15%;
 				height: 100%;
 				margin-left: 70%;
+				color: white;
 				}
          
 			footer
@@ -65,6 +68,7 @@
     			padding: 0;
     			overflow: hidden;
     			background-color: #333;
+    			font-family: 'Bangers', cursive;
 			}
 			li 
 			{
@@ -91,7 +95,7 @@
 				margin-top: 0px;
 				padding-top: 50px;
 				margin-left: 400px;
-				font-family: hola;
+				
 				font-size: 50px;
 			}
 			.activa
@@ -110,5 +114,12 @@
 				font-size: 20px;
 				margin: 0;
 			}	
-
-            
+			A:link {color: white; font-size: 10pt; font-family: 'Bangers', serif; text-decoration: none }
+            A:hover {color: white; font-size: 15pt; font-family: 'Bangers', serif; text-decoration: none }
+            A:visited {color: white; font-size: 10pt; font-family: 'Bangers', serif; text-decoration: none }
+				button:hover {
+				 background: rgba(0,0,0,0);
+				 color: #3a7999;
+				 box-shadow: inset 0 0 0 3px #0046ff;
+				}
+	
