--- a/css/busca_meme.css
+++ b/css/busca_meme.css
@@ -23,22 +23,14 @@
 				background-repeat: repeat-x;
 
 			} 
-				
-			nav
-			{
-                               
-                background-color: #333;
-				width: 100%;
-				height:5% ;	
-				font-family: "Bangers", cursive;
-			}
+			
 			section 
 			{
 				background-image: url(../img/blanco.jpg);
 				width: 65%;
 				height: auto;
-				margin: 30px;
-				
+				margin-left: 10%;
+				margin-top: 1%;
 				
 			}
 			#aside_1
@@ -50,73 +42,11 @@
 				margin-left: 70%;
 				color: white;
 				}
-         
-			footer
-			{	
-				text-align: center;
-				color :white;
-				background-color:#333;
-				width: 100%;
-				height: 10%;
-			}
-			p
-			{
-				position: relative;
-			}
-			ul 
-			{
-
-    			list-style-type: none;
-    			margin:0px 0px 0px 200px ;
-    			padding: 0;
-    			overflow: hidden;
-    			background-color: #333;
-    			font-family: 'Bangers', cursive;
-			}
-			li 
-			{
-    			float: left;
-			}			
-
-			li a 
-			{
-    			display: block;
-    			color:#58FAD0;
-    			text-align: center;
-    			padding: 14px 16px;
-    			font-family: fantasy;
-    			text-decoration: none;
-			}
-			li a:hover
-			{
-    			background-color: #111;
-			}
-			h1	
-			{
-				position: absolute;
-				color: #61380B;
-				margin-top: 0px;
-				padding-top: 50px;
-				margin-left: 400px;
-				
-				font-size: 50px;
-			}
-			.activa
+         .activa
 			{
 				background-color: #000000;
 			}
-			p
-			{
-				font-family: b;
-				font-size: 20px;
-				margin: 0;
-			}	
-			h5
-			{
-				
-				font-size: 20px;
-				margin: 0;
-			}	
+	
 			A:link {color: white; font-size: 10pt; font-family: 'Bangers', serif; text-decoration: none }
             A:hover {color: white; font-size: 15pt; font-family: 'Bangers', serif; text-decoration: none }
             A:visited {color: white; font-size: 10pt; font-family: 'Bangers', serif; text-decoration: none }
@@ -125,4 +55,19 @@
 				 color: #3a7999;
 				 box-shadow: inset 0 0 0 3px #0046ff;
 				}
+		div
+		{
 	
+			background-image: url(../img/blanco.jpg);
+			margin-right: 25%;
+			margin-left: 10%;
+			height: auto;
+			border :1px solid black;
+		}
+		img
+		{		
+			margin-left: 10%;
+			width: 70%;
+		
+		}
+		
