--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@
 				
 			nav
 			{
-                               
+             	position: relative;                  
                 background-color: #333;
 				width: 100%;
 				height:5% ;	
@@ -34,6 +34,7 @@
 			}
 			section 
 			{
+				position: absolute;
 				background-image: url(../img/blanco.jpg);
 				width: 65%;
 				height: auto;
