Arreglada Adaptacion A toda Pantalla

--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@
 				background-image: url(../img/blanco.jpg);
 				width: 65%;
 				height: auto;
-				margin: 30px;
+				margin: 3%;
 				
 				
 			}
@@ -89,8 +89,8 @@
 				position: absolute;
 				color: #61380B;
 				margin-top: 0px;
-				padding-top: 50px;
-				margin-left: 400px;
+				padding-top: 5%;
+				margin-left: 40%;
 				
 				font-size: 50px;
 			}
